Use flex and flex-grow to prevent the spillover

--- a/styles.css
+++ b/styles.css
@@ -446,12 +446,16 @@
         width: 295px;
         height: 87px;
         
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        padding: 0px;
-        gap: 12px;
-        
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+
+        color: #FFFFFF;
+
+        flex: none;
+        flex-grow: 0;       
     }
     
 }
